# py100mbify

./: .editorconfig  .gitignore  100mbify.py  README.md  pr_description.md  pyproject.toml
src/py100mbify/: __init__.py  __main__.py  scene_runner.py
tests/: test_py100mbify.py
