[project]
name = "py100mbify"
version = "0.1.2"
description = "A command-line tool for compressing video files to a target size using FFmpeg."
readme = "README.md"
requires-python = ">=3.8"
dependencies = []
keywords = ["ffmpeg", "webm", "video", "compression", "cli"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Video",
]

[project.scripts]
py100mbify = "py100mbify:main"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[tool.setuptools.packages]
find = {where = ["src"]}
