[project]
name = "py100mbify"
version = "0.1.6"
description = "A command-line tool for compressing video files to a target size using FFmpeg."
readme = "README.md"
requires-python = ">=3.8"
dependencies = []
keywords = ["ffmpeg", "webm", "video", "compression", "cli"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Video",
]

[project.scripts]
py100mbify = "py100mbify:main"

[build-system]
# Switch to setuptools for a pure-Python build chain.
# This avoids needing Rust/maturin on lightweight environment.
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {where = ["src"]}
